Github issue #142 Project status composer should not be collapsed when it contains content Github issue #153 Dashboard: Compose update collapsed is not to speck -- Removed close button and collapse behaviour from Messaging and styled as per non collapsed style -- Collapsed the composer in dashboard on click of close button without caring about the content being there in composer.

--- a/src/projects/detail/Messages.scss
+++ b/src/projects/detail/Messages.scss
@@ -34,6 +34,15 @@
 
     .new-post-composer {
       margin-bottom: 4 * $base-unit;
+      background-color: $tc-white;
+
+      .modal-row:hover {
+        background-color: $tc-white;
+      }
+
+      .btn-close {
+        display: none;
+      }
     }
 
     .feed-action-card + .feed-action-card {
